refactor : 못 먹는 음식이 없는 경우 빈 리스트 List.of로 수정